/*
 * $Id: ChangeLog,v 1.180 2002/04/28 20:18:38 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2002-04-28 22:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  + include/tprint.hpp
    * Added missing require file for Winprinter support

2002-04-28 17:25 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * include/hbset.h
    * Added the necessary member to work WinPrinter
  * source/rtl/console.c
    sourcr/rtl/set.c
    * Added support for Winprinter on SET()
       Set(24,"job:xxx") Set the winprinter Jobname
       Set(24,"Win:xxx") Set the Windows Printer to USE( must match the Printer
       name on Printer Folder
  + source/rtl/tprint.cpp
    source/rtl/tprinter.cpp
    * Printer Class and wrapper for Winprinter
  * makefile.bc
    makefile.gc
    * Updated makefiles
  + tests/testwprn.prg
    * Test file for printer enhacementes

2002-04-27 20:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    + Added Harbour compatibility wrappers:
        #define hb_retc_buffer( szText )                   hb_retcAdopt( szText )
        #define hb_retclen_buffer( szText, ulLen )         hb_retclenAdopt( szText, ulLen )
        #define hb_retc_const( szText )                    hb_retcStatic( szText )
        #define hb_itemArrayPut ( pArray, ulIndex, pItem ) ( hb_arraySet( pArray, ulIndex, pItem ), pArray )

    * Added -DHB_API_MACROS support for some missing hb_ret*().

  * include/hbfast.h
  * source/vm/fastitem.c
    + Added:
        PHB_ITEM hb_itemPutCStatic( PHB_ITEM pItem, char * szText )
        PHB_ITEM hb_itemPutCLStatic( PHB_ITEM pItem, char * szText, ULONG ulLen )
        void     hb_retcStatic( char * szText )
        void     hb_retclenStatic( char * szText, ULONG ulLen )

  * source/pp/pptable.c
    + Added support for: